# revural

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  agent.py  backend.Dockerfile  cloudbuild.yaml  debug_agent_tool.py  frontend.Dockerfile  pyproject.toml  sample.md  test_e2e.js  test_prd.md
.claude/: settings.json
.claude/commands/: analyze.md  commit-and-pr.md  ensure-quality.md  gemini-documentation.md  gemini-search.md  improve.md  index.md  initialize-project.md  safe-refactor.md  scan.md  task.md  troubleshoot.md  write-tests.md
.codex/: config.example.toml  config.toml
.gemini/: settings.json  styleguide.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  claude_code_collaboration.yml  feature_request.yml
.github/workflows/: ci.yml
app/: main.py  schemas.py  services.py
deprecated/: facilitator_agent.py  persona_agent.py  prompts.py
deprecated/facilitator/: agent.py
deprecated/persona/: agent.py
deprecated/test_persona/: agent.py
docs/: adk_refactoring_plan.md  agent_output_refactoring_plan.md  api_refactoring_plan.md  development-patterns.md  prd_mockup_prompt.md  study.md  typecheck-fixes-report.md
docs/0907/: next.md
docs/250830/: architecture.md  prd.md
docs/250903/: update.md
docs/250906/: api.md  architecture.md  prd.md  scope.md  usm.md
docs/250910/: frontend_modification_plan.md
docs/250914/: current_architecture.md  development_plan.md  issue_fix_plan.md  ui_fix_plan_final.md  ui_ux_flow.md  user_story_map.md
docs/250915/: summary_page_implementation_plan.md  todo.md  ui_layout_specification.md
docs/250918/: frontend_review_issues.md  multi_document_support_impact.md  review_progress_status_plan.md
docs/250920/: bug_fix_plan.md  refactor_targets.md  todo.md
docs/250921/: asis_tobe.md  user_story_map.md
docs/250922/: agent_profile_spec.md  ai_agent_profiles.md  ai_team_composition_overview.md  ai_team_composition_spec.md  backend_api_changes.md  common_prompt_structure.md  frontend_ui_changes.md  implementation_change_points.md  implementation_tasks.md  new_agents_prompts.md  presets_and_roles_config.md  ui_information_architecture.md
docs/250923/: deployment_checklist.md  docker_deployment_strategy.md  google_cloud_hackathon_deployment_guide.md
docs/250924/: blog_post_draft.md  hackathon_submission.md  post.md  presentation_story.md  todo.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatWindow.tsx  IssueCard.tsx  IssueDetailView.tsx  LoadingSpinner.tsx  PrdInputForm.tsx  PrdTextView.tsx  ReviewFocusView.tsx  ReviewPage.tsx  SuggestionBox.tsx  SummaryPage.tsx  theme-provider.tsx
frontend/components/ai-elements/: prompt-input.tsx
frontend/components/layout/: Header.tsx
frontend/components/review/: IssueAccordionItem.tsx  IssueDetailView.tsx  IssueListView.tsx
frontend/components/team/: MemberSelectGrid.tsx  TeamPresetSelect.tsx
frontend/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  chart.tsx  input.tsx  select.tsx  tabs.tsx  textarea.tsx
frontend/lib/: api.ts  errors.ts  presets.ts  text.ts  types.ts  utils.ts
frontend/store/: useReviewStore.ts
prompts/: agents.toml
scripts/: install_codex_config.sh  setup.sh  try_api.py  update_project_name.py
src/hibikasu_agent/: __init__.py  main.py  types.py
src/hibikasu_agent/agents/: __init__.py  facilitator_agent.py  orchestrator.py  persona_agent.py  prompts.py  specialist.py
src/hibikasu_agent/api/: __init__.py  ai_orchestrator_bridge.py  ai_services.py  config.py  dependencies.py  main.py  services.py
src/hibikasu_agent/constants/: __init__.py  agents.py
src/hibikasu_agent/core/: __init__.py  config.py  example.py
src/hibikasu_agent/schemas/: __init__.py  models.py  models.pyi
src/hibikasu_agent/services/: __init__.py  ai_service.py  (+6 more)
tests/: conftest.py  test_basic.py  test_dummy.py
tests/api/: conftest.py  test_agents_roles_endpoint.py  test_api_mock.py  test_api_mode.py  test_dialog_endpoint.py  test_review_with_selected_agents.py  test_reviews_endpoints.py
tests/integration/: test_basic_integration.py
tests/scripts/: run_discussion.py  run_specialist_review.py
tests/unit/: test_agent_selection.py  test_ai_service.py  test_example.py  test_review_runner.py  test_review_store.py  test_tools.py
(+50 files in other folders)
